<resources>
    <string name="app_name">Pasang Baliho (Klien)</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="image_aplikasi">logo_aplikasi</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_label">Sign In</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="or">OR</string>
    <string name="title_account">Account</string>
    <string name="image_transaksi">image transaksi</string>
    <string name="account_tittle_fragment">Account</string>
    <string name="image_dialog_center">image dialog</string>
    <string name="ok">OK</string>
    <string name="batal">Batal</string>
    <string name="gambar_slider">gambar slider</string>
    <string name="title_activity_maps">Map</string>
    <string name="kategori">Kategori</string>
    <string name="nama_baliho">Nama Baliho</string>
    <string name="lebar_baliho">Lebar Baliho</string>
    <string name="tinggi_baliho">Tinggi Baliho</string>
    <string name="venue_baliho">Venue</string>
    <string name="deskripsi_baliho">Deskripsi Baliho</string>
    <string name="harga_baliho">Harga Baliho</string>
    <string name="titik_lokasi">Titik Lokasi</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota">Kota</string>
    <string name="alamat_baliho">Alamat Baliho</string>
    <string name="foto_baliho">Foto Baliho</string>
    <string name="syaratdanketentuan">Dengan mendaftar atau masuk di aplikasi pasang baliho, berarti anda sudah menyetujui <a href="http://wwwpasangbaliho.com/kebijakan-privasi">Syarat dan Ketentuan</a> kami</string>
</resources>
