<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/image_aplikasi"
        android:src="@mipmap/logopasangbaliho"
        app:layout_constraintBottom_toTopOf="@id/layout_edit_email"
        app:layout_constraintEnd_toEndOf="@id/layout_edit_email"
        app:layout_constraintStart_toStartOf="@id/layout_edit_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email_hint"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/poppinsregular"
             />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password_hint"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/layout_edit_email"
        app:layout_constraintStart_toStartOf="@id/layout_edit_email"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/poppinsregular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_label"
        app:layout_constraintEnd_toEndOf="@id/layout_edit_password"
        app:layout_constraintStart_toStartOf="@id/layout_edit_password"
        app:layout_constraintTop_toBottomOf="@+id/layout_edit_password" />

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/button_sign_up"-->
<!--        style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="2dp"-->
<!--        android:text="@string/sign_up_label"-->
<!--        app:layout_constraintEnd_toEndOf="@id/button_sign_in"-->
<!--        app:layout_constraintStart_toStartOf="@id/button_sign_in"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />-->

    <TextView
        android:id="@+id/syaratdanketentuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default_menu_utama_besar"
        android:gravity="center"
        android:autoLink="web"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/syaratdanketentuan"
        app:layout_constraintTop_toBottomOf="@id/button_sign_in" />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
