<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.input.baliho.InputDetailBaliho">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default_menu_utama"
        android:background="@drawable/shadow_bottom"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="@dimen/margin_default_menu_utama"
            android:paddingEnd="@dimen/margin_default_menu_utama"
            android:src="@drawable/ic_chevron_left_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsbold"
            android:maxLines="1"
            android:text="Input Detail Baliho"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/text_judul"
            app:layout_constraintBottom_toBottomOf="@+id/button_back"
            app:layout_constraintStart_toEndOf="@+id/button_back"
            app:layout_constraintTop_toTopOf="@+id/button_back" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_stepper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_default_menu_utama_besar"
            android:layout_marginBottom="@dimen/margin_default_menu_utama"
            android:paddingBottom="@dimen/margin_default_menu_utama"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/button_back"
            app:layout_constraintTop_toBottomOf="@+id/button_back">

            <ImageView
                android:id="@+id/img_1"
                android:layout_width="@dimen/lebar_icon_stepper"
                android:layout_height="@dimen/lebar_icon_stepper"
                android:src="@drawable/cb_proses"
                app:layout_constraintEnd_toEndOf="@id/text_1"
                app:layout_constraintStart_toStartOf="@id/text_1"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/img_1"
                app:layout_constraintEnd_toStartOf="@id/img_2"
                app:layout_constraintStart_toEndOf="@+id/img_1"
                app:layout_constraintTop_toTopOf="@id/img_1" />

            <ImageView
                android:id="@+id/img_2"
                android:layout_width="@dimen/lebar_icon_stepper"
                android:layout_height="@dimen/lebar_icon_stepper"
                android:src="@drawable/cb_belum_proses"
                app:layout_constraintEnd_toStartOf="@id/view_2"
                app:layout_constraintStart_toEndOf="@id/view_1"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/img_2"
                app:layout_constraintEnd_toStartOf="@id/img_3"
                app:layout_constraintStart_toEndOf="@+id/img_2"
                app:layout_constraintTop_toTopOf="@id/img_2" />

            <ImageView
                android:id="@+id/img_3"
                android:layout_width="@dimen/lebar_icon_stepper"
                android:layout_height="@dimen/lebar_icon_stepper"
                android:src="@drawable/cb_belum_proses"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/view_2"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:text="Detail Baliho"
                android:textColor="@color/textColorDark"
                android:textSize="8sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_1" />

            <TextView
                android:id="@+id/text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:text="Lokasi Baliho"
                android:textColor="@color/textColorDark"
                android:textSize="8sp"
                app:layout_constraintEnd_toEndOf="@id/img_2"
                app:layout_constraintStart_toStartOf="@id/img_2"
                app:layout_constraintTop_toBottomOf="@id/img_1" />

            <TextView
                android:id="@+id/text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:gravity="center"
                android:text="Foto Baliho"
                android:textColor="@color/textColorDark"
                android:textSize="8sp"
                app:layout_constraintEnd_toEndOf="@id/img_3"
                app:layout_constraintStart_toStartOf="@id/img_3"
                app:layout_constraintTop_toBottomOf="@id/img_1" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_default_menu_utama">

            <com.tiper.MaterialSpinner
                android:id="@+id/kategori_spinner"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kategori"
                app:layout_constraintTop_toTopOf="parent"
                app:spinnerMode="bottomsheet" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_namabaliho"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default_menu_utama_besar"
                android:hint="@string/nama_baliho"
                app:boxBackgroundColor="@color/frontdrop"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kategori_spinner">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_namabaliho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_lebar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_default_menu_utama"
                android:hint="@string/lebar_baliho"
                app:boxBackgroundColor="@color/frontdrop"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@+id/text_ukuran_lebar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_namabaliho">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_lebar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_ukuran_lebar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="CM"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/margin_default_menu_utama_besar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layout_edit_lebar" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_tinggi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_default_menu_utama"
                android:hint="@string/tinggi_baliho"
                app:boxBackgroundColor="@color/frontdrop"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@+id/text_ukuran_tinggi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_lebar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_tinggi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_ukuran_tinggi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="CM"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/margin_default_menu_utama_besar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layout_edit_tinggi" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_venue"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/venue_baliho"
                app:boxBackgroundColor="@color/frontdrop"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_tinggi">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_venue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_deskripsi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/deskripsi_baliho"
                app:boxBackgroundColor="@color/frontdrop"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_venue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edit_harga"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_default_menu_utama"
                android:hint="@string/harga_baliho"
                app:boxBackgroundColor="@color/frontdrop"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@+id/text_harga"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_deskripsi">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_harga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:text="/bulan"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/margin_default_menu_utama_besar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layout_edit_harga" />

            <View
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_edit_harga" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/frontdrop"
        android:padding="@dimen/margin_default_menu_utama"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Simpan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progress_loading"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="BallPulseIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/reload"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_refresh_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>